Revert "MOZ-331: add horizontal scroll to table. fix table issues"
This reverts commit 680002fd8169b4cc1e63797694497504695cf44a.

--- a/src/pages/Map/components/Footer/index.module.css
+++ b/src/pages/Map/components/Footer/index.module.css
@@ -18,7 +18,6 @@
   color: #ffffff;
   position: sticky;
   bottom: 0;
-  left: 0;
   z-index: 9;
 }
 
