--- a/src/pages/Map/components/GraphContainer/index.module.css
+++ b/src/pages/Map/components/GraphContainer/index.module.css
@@ -1,7 +1,6 @@
 .container {
   position: sticky;
   top: -450px;
-  left: 0;
   z-index: 10;
 }
 .container.cursorPointer {
